Updates on styles

--- a/src/webparts/faq/components/Faq.module.scss
+++ b/src/webparts/faq/components/Faq.module.scss
@@ -193,3 +193,14 @@ button {
 img.logo {
   width: 80px;
 }
+.root-119:hover {
+  background-color: rgba(8, 120, 124, 0.5) !important;
+  border: none !important;
+}
+.Login {
+  background-color: rgba(3, 120, 124, 0.8);
+}
+.Login:hover {
+  background-color: rgba(3, 120, 124, 0.5);
+  border: none;
+}
