--- a/src/webparts/faq/components/Faq.module.scss
+++ b/src/webparts/faq/components/Faq.module.scss
@@ -204,7 +204,6 @@ img.logo {
   background-color: rgba(3, 120, 124, 0.5);
   border: none;
 }
-<<<<<<< HEAD
 .Category select {
   background-color: #5f4949;
   color: #fff;
@@ -217,7 +216,7 @@ img.logo {
 }
 .all {
   font-family: monospace;
-=======
+}
 .logoutButtonStyle {
   background-color: white;
   color: #713838;
@@ -228,5 +227,4 @@ img.logo {
   background: linear-gradient(to right, #5f4949 0%, #713838 30%);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
->>>>>>> tracy
 }
