--- a/src/webparts/faq/components/Faq.module.scss
+++ b/src/webparts/faq/components/Faq.module.scss
@@ -69,7 +69,7 @@
 
 button {
   padding: 10px 20px;
-  background-color: #0078d4;
+  background-color: #713838;
   color: white;
   border: none;
   border-radius: 4px;
@@ -77,7 +77,7 @@ button {
   margin-right: 10px;
 
   &:hover {
-    background-color: #005a9e;
+    background-color: #713838;
   }
 }
 
@@ -193,17 +193,17 @@ button {
 img.logo {
   width: 80px;
 }
-.root-119:hover {
-  background-color: rgba(8, 120, 124, 0.5) !important;
-  border: none !important;
-}
-.Login {
-  background-color: rgba(3, 120, 124, 0.8);
-}
-.Login:hover {
-  background-color: rgba(3, 120, 124, 0.5);
-  border: none;
-}
+// .root-119:hover {
+//   background-color: rgba(8, 120, 124, 0.5) !important;
+//   border: none !important;
+// }
+// .Login {
+//   background-color: rgba(3, 120, 124, 0.8);
+// }
+// .Login:hover {
+//   background-color: rgba(3, 120, 124, 0.5);
+//   border: none;
+// }
 .Category {
   margin-right: 20px;
 }
