--- a/src/webparts/faq/components/Faq.module.scss
+++ b/src/webparts/faq/components/Faq.module.scss
@@ -1,5 +1,12 @@
 @import "~@fluentui/react/dist/sass/References.scss";
 
+:global {
+  #workbenchPageContent,
+  .CanvasComponent.LCS .CanvasZone {
+    max-width: 100% !important;
+  }
+}
+
 .faq {
   overflow: hidden;
   padding: 1em;
